Proofread mcp/ai-agents/real-world-examples.mdx

--- a/mcp/ai-agents/real-world-examples.mdx
+++ b/mcp/ai-agents/real-world-examples.mdx
@@ -12,7 +12,7 @@ import GramCallout from "../.partials/gram-callout.mdx";
 
 For the past few months, while everyone and their dog were either vibe coding, vibe debugging (_"claude, plz fix"_), or Ghiblifying their family portraits, we've been heads-down and shipping the tools that help developers connect with our customers' APIs.
 
-At Speakeasy, we generate (no, the _other_ generate) [type-safe SDKs](https://www.speakeasy.com/product/sdk-generation) that look and work as if they were handwritten in the [low-background coding](https://en.wikipedia.org/wiki/Low-background_steel) days by world-class, biological, flesh-and-bone human engineers. At the risk of sounding like Luddites, we prefer SDKs that **humans** find easy to use. Development teams use our customers' services to, among other things, build the [scaffolding stitching modern APIs together](https://konghq.com/) and [manage their most important assets](https://clerk.com/). Besides usability, the importance of correctness, safety, and stability in the SDKs we generate can't be overstated.
+At Speakeasy, we generate (no, the _other_ generate) [type-safe SDKs](https://www.speakeasy.com/product/sdk-generation) that look and work as if they were handwritten in the [low-background coding](https://en.wikipedia.org/wiki/Low-background_steel) days by world-class, biological, flesh-and-bone human engineers. At the risk of sounding like Luddites, we prefer SDKs that **humans** find easy to use. Development teams use our customers' services to, among other things, build the [scaffolding that stitches modern APIs together](https://konghq.com/) and [manage their most important assets](https://clerk.com/). Besides usability, the importance of correctness, safety, and stability in the SDKs we generate can't be overstated.
 
 So, with all the [fear](https://invariantlabs.ai/blog/mcp-security-notification-tool-poisoning-attacks), [uncertainty](https://simonwillison.net/2025/Apr/9/mcp-prompt-injection/#i-don-t-know-what-to-suggest), and doubt commenters are sharing about the Model Context Protocol (MCP), and MCP's focus on enabling **agents instead of humans**, you may well wonder why we (the self-proclaimed defenders of API safety) are [embracing it so eagerly](https://www.speakeasy.com/post/release-model-context-protocol) instead of putting on the brakes.
 
@@ -126,7 +126,7 @@ In this chart, we see how the Notion MCP server communicates with the Notion API
 
 We'll need three elements to get this working:
 
-1. The [Claude](https://claude.ai/download) desktop app installed on macOS or Windows.
+1. [Claude Desktop](https://claude.ai/download) installed on macOS or Windows.
 2. Access to a [Notion workspace](https://www.notion.so) with either:
    - Permission to manage [Notion Integrations](https://www.notion.so/my-integrations) yourself.
    - A workspace admin you can ask to add an integration.
