Proofread mcp/building-servers/building-fastapi-server.mdx

--- a/mcp/building-servers/building-fastapi-server.mdx
+++ b/mcp/building-servers/building-fastapi-server.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Building an MCP server for your FastAPI API with FastMCP"
-description: "A guide to building an MCP server for your FastAPI API using FastMCP and Speakeasy and comparison of the two tools' maintainability, code quality, and usage."
+description: "A guide to building an MCP server for your FastAPI API using FastMCP and Speakeasy and a comparison of the two tools' maintainability, code quality, and usage."
 ---
 
 import { Callout, Screenshot } from "@/mdx/components";
