Proofread mcp/using-mcp/remote-servers.mdx

--- a/mcp/using-mcp/remote-servers.mdx
+++ b/mcp/using-mcp/remote-servers.mdx
@@ -461,7 +461,7 @@ Now let's configure Cloudflare Zero Trust to secure access to your MCP server.
    - **Action**: Allow.
    - **Configure rules**: Select who should have access to your MCP server.
      - For testing, you can use **Emails** and add your email address.
-     - For a team, you might use **Emails ending in** with your company domain.
+     - For a team, you might use **Emails ending in** your company domain.
    - Click **Save**
 
 9. Click **Next** on the application. You can leave the default selected values for the optional settings.
