Update Claude name in mermaid, real-world-examples.mdx

--- a/mcp/ai-agents/real-world-examples.mdx
+++ b/mcp/ai-agents/real-world-examples.mdx
@@ -87,7 +87,7 @@ flowchart TB
     classDef serviceNodeStyle fill:#555,stroke:#ff0,stroke-width:2px,color:#ff0
 
     %% Client section
-    subgraph client["Claude for Desktop (MCP Client)"]
+    subgraph client["Claude Desktop (MCP Client)"]
         ClaudeAgent["Claude Agent"]:::clientNodeStyle
         ClaudeMCP{"MCP Client Library"}:::clientNodeStyle
         ClaudeAgent ==> ClaudeMCP
@@ -156,7 +156,7 @@ The most popular Notion MCP server we could find on GitHub was [`suekou/mcp-noti
   </p>
 </Callout>
 
-### Installing the Notion MCP server in Claude for Desktop
+### Installing the Notion MCP server in Claude Desktop
 
 Now that we have our MCP server and version, we'll add a command to install and run the server to the Claude configuration file, which you can find here:
 
@@ -313,7 +313,7 @@ flowchart TB
     classDef appNodeStyle fill:#555,stroke:#ff0,stroke-width:2px,color:#ff0
 
     %% Client section
-    subgraph client["Claude for Desktop (MCP Client)"]
+    subgraph client["Claude Desktop (MCP Client)"]
         ClaudeAgent["Claude Agent"]:::clientNodeStyle
         ClaudeMCP{"MCP Client Library"}:::clientNodeStyle
         ClaudeAgent ==> ClaudeMCP
