Remove comma, optimizing-openapi.mdx

--- a/mcp/building-servers/optimizing-openapi.mdx
+++ b/mcp/building-servers/optimizing-openapi.mdx
@@ -40,7 +40,7 @@ Speakeasy extracts every detail from your OpenAPI document: endpoints, methods, 
 
 These tools are designed to be easily consumed by AI models, providing them with the necessary context to understand how to interact with your API.
 
-You can then give your AI tool access to the MCP server, and the available tools and their parameters.
+You can then give your AI tool access to the MCP server and the available tools and their parameters.
 
 When Speakeasy generates your TypeScript SDK from an OpenAPI document, it also creates a corresponding MCP server. This MCP server is a lightweight wrapper around the generated SDK, specifically optimized for AI agent interactions.
 
