Fix typo, protocol-deep-dive.mdx

--- a/mcp/building-servers/protocol-deep-dive.mdx
+++ b/mcp/building-servers/protocol-deep-dive.mdx
@@ -417,7 +417,7 @@ Generate a GitHub personal access token:
 
 Now that we have a GitHub token, let's add the GitHub MCP Server.
 
-![Configuring the GitHub MCP Derver in Cline's settings panel](../assets/intro-in-depth/github-setup.png)
+![Configuring the GitHub MCP Server in Cline's settings panel](../assets/intro-in-depth/github-setup.png)
 
 1. Click the **Cline (robot)** icon in the VS Code sidebar.
 2. Click the **MCP Servers** toolbar button at the top of the Cline panel.
