Fix typo, tools.mdx

--- a/mcp/building-servers/protocol-reference/tools.mdx
+++ b/mcp/building-servers/protocol-reference/tools.mdx
@@ -10,7 +10,7 @@ import GramCallout from "../../.partials/gram-callout.mdx";
 
 # What are MCP tools?
 
-MCP tools are callable functions that MCP servers expose to the client. They allow clients to interact with real-world external environments, for example, by querying databases, calling APIs, writing files, triggering workflows, and more.re.
+MCP tools are callable functions that MCP servers expose to the client. They allow clients to interact with real-world external environments, for example, by querying databases, calling APIs, writing files, triggering workflows, and more.
 
 Tools are how clients can perform actions and trigger side effects using MCP.
 
