--- a/mcp/using-mcp/installing-mcp-servers.mdx
+++ b/mcp/using-mcp/installing-mcp-servers.mdx
@@ -340,7 +340,7 @@ Open the Command Palette (`ctrl + shift + p` or `cmd + shift + p`) and type `MCP
   variant="cli"
   image={{
     src: mcpListServers,
-    alt: "A screenshot shot shows the List Servers command being typed in the Command Palette.",
+    alt: "A screenshot shows the List Servers command being typed in the Command Palette.",
   }}
 />
 
