Proofread merge, resource-configuration.mdx

--- a/docs/terraform/resource-configuration.mdx
+++ b/docs/terraform/resource-configuration.mdx
@@ -76,7 +76,7 @@ components:
 
 ### Resource Example
 
-Example resource configuration is based on the OpenAPI Specification for API operation request and response data schemas. Speakeasy only generates example configuration for configurable properties. Example configuration values use the property `example` field when available or fallback to a generated value of the expected type following any `enum` or validation fields.
+Example resource configuration is based on the OpenAPI Specification for API operation request and response data schemas. Speakeasy only generates example configuration for configurable properties. Example configuration values use the property `example` field when available or, as a fallback, use a generated value of the expected type following any `enum` or validation fields.
 
 Fully customize the example resource configuration by using Speakeasy [code customization capabilities](/docs/customize/code/monkey-patching).
 
